fixed spacing in news grid

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -56,6 +56,7 @@
       margin-bottom: 30px;
       margin-right: 0;
       .caption {
+        margin-top: 10px;
         .artist-name {
           font-size: 16px;
           color: $g20;
